<resources>
    <string name="app_name">Firdaus</string>
    <string name="subuh">Subuh</string>
    <string name="fajar">Fajar</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="atur_lokasi">Atur Lokasi</string>
    <string name="lokasi_saat_ini">Lokasi saat ini</string>
    <string name="cari_lokasi_manual">Cari lokasi manual</string>
    <string name="cari_lokasi">Cari lokasi</string>
</resources>