<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_sholat"
            style="@style/TextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Isya" />

        <TextView
            android:id="@+id/text_time"
            style="@style/TextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/text_sholat"
            app:layout_constraintTop_toBottomOf="@id/text_sholat"
            tools:text="18.55" />

        <TextView
            android:id="@+id/text_countdown"
            style="@style/TextSubHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/text_time"
            app:layout_constraintTop_toBottomOf="@id/text_time"
            tools:text="36 menit 24 detik lagi" />

        <TextView
            android:id="@+id/text_city"
            style="@style/TextSubHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_countdown"
            tools:text="Bantul, Yogyakarta" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_datetime"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_info"
        tools:text="Senin, 7 Desember 2020" />

    <TextView
        android:id="@+id/text_date_hijriah"
        style="@style/TextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/text_datetime"
        app:layout_constraintStart_toStartOf="@+id/text_datetime"
        app:layout_constraintTop_toBottomOf="@+id/text_datetime"
        tools:text="22 Rabiul Awal 1442" />

    <!--  Subuh-->
    <TextView
        android:id="@+id/label_subuh"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/subuh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date_hijriah" />

    <TextView
        android:id="@+id/text_time_subuh"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_subuh"
        app:layout_constraintTop_toBottomOf="@+id/text_date_hijriah"
        tools:text="03.47" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_subuh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_subuh"
        app:srcCompat="@drawable/ic_volume_up" />

    <!--  Fajar-->
    <TextView
        android:id="@+id/label_fajar"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fajar"
        app:layout_constraintStart_toStartOf="@+id/label_subuh"
        app:layout_constraintTop_toBottomOf="@+id/label_subuh" />

    <TextView
        android:id="@+id/text_time_fajar"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_fajar"
        app:layout_constraintTop_toTopOf="@+id/image_notif_fajar"
        tools:text="05.12" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_fajar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/image_notif_subuh"
        app:layout_constraintTop_toTopOf="@+id/label_fajar"
        app:srcCompat="@drawable/ic_notifications_off" />

    <!--  Dhuhur-->
    <TextView
        android:id="@+id/label_dzuhur"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dzuhur"
        app:layout_constraintStart_toStartOf="@+id/label_fajar"
        app:layout_constraintTop_toBottomOf="@+id/label_fajar" />

    <TextView
        android:id="@+id/text_time_dzuhur"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_dzuhur"
        app:layout_constraintTop_toTopOf="@+id/image_notif_dzuhur"
        tools:text="11.29" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_dzuhur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/image_notif_fajar"
        app:layout_constraintTop_toTopOf="@+id/label_dzuhur"
        app:srcCompat="@drawable/ic_notifications" />

    <!--  Ashar-->
    <TextView
        android:id="@+id/label_ashar"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ashar"
        app:layout_constraintStart_toStartOf="@+id/label_dzuhur"
        app:layout_constraintTop_toBottomOf="@+id/label_dzuhur" />

    <TextView
        android:id="@+id/text_time_ashar"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_ashar"
        app:layout_constraintTop_toTopOf="@+id/image_notif_ashar"
        tools:text="11.29" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_ashar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/image_notif_dzuhur"
        app:layout_constraintTop_toTopOf="@+id/label_ashar"
        app:srcCompat="@drawable/ic_notifications" />

    <!--  Maghrib-->
    <TextView
        android:id="@+id/label_maghrib"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/maghrib"
        app:layout_constraintStart_toStartOf="@+id/label_ashar"
        app:layout_constraintTop_toBottomOf="@+id/label_ashar" />

    <TextView
        android:id="@+id/text_time_maghrib"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_maghrib"
        app:layout_constraintTop_toTopOf="@+id/image_notif_maghrib"
        tools:text="11.29" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_maghrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/image_notif_ashar"
        app:layout_constraintTop_toTopOf="@+id/label_maghrib"
        app:srcCompat="@drawable/ic_notifications" />

    <!--  Isya-->
    <TextView
        android:id="@+id/label_isya"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/isya"
        app:layout_constraintStart_toStartOf="@+id/label_maghrib"
        app:layout_constraintTop_toBottomOf="@+id/label_maghrib" />

    <TextView
        android:id="@+id/text_time_isya"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/image_notif_isya"
        app:layout_constraintTop_toTopOf="@+id/image_notif_isya"
        tools:text="11.29" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notif_isya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/image_notif_maghrib"
        app:layout_constraintTop_toTopOf="@+id/label_isya"
        app:srcCompat="@drawable/ic_notifications" />
</androidx.constraintlayout.widget.ConstraintLayout>